--- a/touchless/src/index.css
+++ b/touchless/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /*__________*\
-* Base
+   * Base*
 \*__________*/
 
 html{
@@ -12,4 +12,12 @@ html{
 body{ 
   @apply bg-zinc-900 text-zinc-50
 
+}
+/*__________*\
+* Components*
+\*__________*/
+
+/* Menu btn*/
+.menu-btn{
+  @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl ring-inset ring-1 ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15 transition-[transform,background-color] active:scale-95
 }
