--- a/touchless/src/index.css
+++ b/touchless/src/index.css
@@ -3,7 +3,16 @@
 @tailwind utilities;
 
 /*__________*\
-   * Base*
+ *UTILITIES*
+\*__________*/
+
+.material-symbols-rounded{
+  @apply w-[1em] h-[1em] overflow-hidden;
+  font-variation-settings: 'FILL', 'wgt' 400, 'GRAD' 0, 'opsz' 24;
+}
+
+/*__________*\
+    *Base*
 \*__________*/
 
 html{
@@ -22,7 +31,7 @@ body{
   @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl ring-inset ring-1 ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15 transition-[transform,background-color] active:scale-95
 }
 
-/* NavBar*/
+/*NavBar*/
 .navbar{
   @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50/55 scale-90 isolate blur-sm opacity-0 invisible transition-[opacity,transform,filter] md:static md:flex md:items-center md:mt-0 md:opacity-100 md:blur-0 md:visible md:scale-100 backdrop-blur-2xl
 }
@@ -37,4 +46,12 @@ body{
 }
 .navbar .active-box{
   @apply absolute top-2 left-2 right-2 h-9 bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500
+}
+
+/*NavBar*/
+.btn{
+  @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color]
+}
+.btn-secondary{
+  @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
 }
