--- a/touchless/src/index.css
+++ b/touchless/src/index.css
@@ -10,6 +10,9 @@
   @apply w-[1em] h-[1em] overflow-hidden;
   font-variation-settings: 'FILL', 'wgt' 400, 'GRAD' 0, 'opsz' 24;
 }
+.container{
+  @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
+}
 
 /*__________*\
     *Base*
