--- a/touchless/src/index.css
+++ b/touchless/src/index.css
@@ -2,17 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/*__________*\
- *UTILITIES*
-\*__________*/
 
-.material-symbols-rounded{
-  @apply w-[1em] h-[1em] overflow-hidden;
-  font-variation-settings: 'FILL', 'wgt' 400, 'GRAD' 0, 'opsz' 24;
-}
-.container{
-  @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
-}
 
 /*__________*\
     *Base*
@@ -25,6 +15,24 @@ body{
   @apply bg-zinc-900 text-zinc-50
 
 }
+
+/*__________*\
+ *UTILITIES*
+\*__________*/
+
+.material-symbols-rounded{
+  @apply w-[1em] h-[1em] overflow-hidden;
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+.container{
+  @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
+}
+.img-box{
+  @apply bg-zinc-700 overflow-hidden
+}
+/* .img-cover{
+  @apply w-full h-full object cover
+} */
 /*__________*\
  *Components*
 \*__________*/
@@ -51,7 +59,7 @@ body{
   @apply absolute top-2 left-2 right-2 h-9 bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500
 }
 
-/*NavBar*/
+/*Buttons*/
 .btn{
   @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color]
 }
